README: typo fixes.

--- a/README.html
+++ b/README.html
@@ -157,8 +157,9 @@ uid=1000(luser) gid=1001(socksified) groups=1000(luser),1001(socksified)
 Keep in mind, that changed GID affects filesystem permissions, so if your
 application creates some files, the files will be created with luser:socksified
 owner/group. So, if you're not the only user in the group `socksified` and your
-umask allows to create group-readble files and your directory permissions, etc.
-<p>
+umask allows to create group-readable files and your directory permissions, and
+so on, blah-blah, etc. THEN you may expose your files to another user.
+</p>
 <p>
 Ok, you have been warned.
 </p>
