--- a/README.html
+++ b/README.html
@@ -150,6 +150,14 @@ uid=1000(luser) gid=1000(luser) groups=1000(luser),1001(socksified)
 <strong>luser$</strong> <code>sg socksified -c id</code>
 uid=1000(luser) gid=1001(socksified) groups=1000(luser),1001(socksified)
 <strong>luser$</strong> <code>sg socksified -c "firefox"</code>
+
+# If you want to configure socksifying router, you should look at
+# <a href="doc/iptables-packet-flow.png">doc/iptables-packet-flow.png</a> and <a href="doc/iptables-packet-flow-ng.png">doc/iptables-packet-flow-ng.png</a>
+# Note, you should have proper `local_ip' value to get external packets with
+# redsocks, default 127.0.0.1 will not go. See iptables(8) manpage regarding
+# <a href="http://dev.medozas.de/files/xtables/iptables.html#76">REDIRECT target</a> for details.
+# Depending on your network configuration iptables conf. may be as easy as:
+<strong>root#</strong> <code>iptables -t nat -A PREROUTING --in-interface eth_int -p tcp -j REDSOCKS</code>
 </pre>
 
 <h3>Note about GID-based redirection</h3>
