README: links to packages

--- a/README.html
+++ b/README.html
@@ -85,6 +85,28 @@ proxying (e.g. old SQUID had broken `acl myport' for such connections).</p>
 <p>You can get a copy at <a href="http://www.apache.org/licenses/LICENSE-2.0.html">http://www.apache.org/licenses/LICENSE-2.0.html</a></p>
 
 
+<h2>Packages</h2>
+<ul>
+	<li><img src="http://www.archlinux.org/favicon.ico" alt="" />
+	<a href="https://aur.archlinux.org/packages.php?ID=41765">Archlinux AUR</a></li>
+
+	<li><img src="http://www.debian.org/favicon.ico" alt="" />
+	<a href="http://packages.debian.org/search?searchon=names&keywords=redsocks">Debian</a></li>
+
+	<li><img src="http://www.gentoo.org/favicon.ico" alt="" />
+	<a href="https://code.google.com/p/pentoo/source/browse/portage/trunk/net-proxy/redsocks">Gentoo (pentoo overlay)</a></li>
+
+	<li><img src="http://www.gentoo.org/favicon.ico" alt="" />
+	<a href="http://code.google.com/p/theebuilds/source/browse/trunk/net-misc/redsocks">Gentoo (theebuilds overlay)</a></li>
+
+	<li><img src="http://www.gentoo.org/favicon.ico" alt="" />
+	<a href="http://gpo.zugaina.org/net-proxy/redsocks">Gentoo (zugaina overlay)</a></li>
+
+	<li><img src="http://www.ubuntu.com/sites/all/themes/ubuntu10/favicon.ico" alt="" />
+	<a href="http://packages.ubuntu.com/search?searchon=names&keywords=redsocks">Ubuntu</a></li>
+</ul>
+
+
 <h2>Compilation</h2>
 
 <p><a href="http://libevent.org/">libevent</a> is required.</p>
