Update link to Archlinux AUR. Fixes #82

--- a/README.html
+++ b/README.html
@@ -88,7 +88,7 @@ proxying (e.g. old SQUID had broken `acl myport' for such connections).</p>
 <h2>Packages</h2>
 <ul>
 	<li><img src="http://www.archlinux.org/favicon.ico" alt="" />
-	<a href="https://aur.archlinux.org/packages.php?ID=41765">Archlinux AUR</a></li>
+	<a href="https://aur.archlinux.org/packages/redsocks-git">Archlinux AUR</a></li>
 
 	<li><img src="http://www.debian.org/favicon.ico" alt="" />
 	<a href="http://packages.debian.org/search?searchon=names&keywords=redsocks">Debian</a></li>
