Specify required libevent version in README. Closes #85
libevent-2.0.x is required since 14ff78d.

--- a/README.html
+++ b/README.html
@@ -109,7 +109,7 @@ proxying (e.g. old SQUID had broken `acl myport' for such connections).</p>
 
 <h2>Compilation</h2>
 
-<p><a href="http://libevent.org/">libevent</a> is required.</p>
+<p><a href="http://libevent.org/">libevent-2.0.x</a> is required.</p>
 
 <p>gcc is only supported compiler right now, other compilers can be used
 but may require some code changes.</p>
