--- a/README.html
+++ b/README.html
@@ -174,7 +174,8 @@ uid=1000(luser) gid=1001(socksified) groups=1000(luser),1001(socksified)
 <strong>luser$</strong> <code>sg socksified -c "firefox"</code>
 
 # If you want to configure socksifying router, you should look at
-# <a href="doc/iptables-packet-flow.png">doc/iptables-packet-flow.png</a> and <a href="doc/iptables-packet-flow-ng.png">doc/iptables-packet-flow-ng.png</a>
+# <a href="doc/iptables-packet-flow.png">doc/iptables-packet-flow.png</a> and <a href="doc/iptables-packet-flow-ng.png">doc/iptables-packet-flow-ng.png</a> and
+# <a href="https://en.wikipedia.org/wiki/File:Netfilter-packet-flow.svg">wikipedia/File:Netfilter-packet-flow.svg</a>
 # Note, you should have proper `local_ip' value to get external packets with
 # redsocks, default 127.0.0.1 will not go. See iptables(8) manpage regarding
 # <a href="http://dev.medozas.de/files/xtables/iptables.html#76">REDIRECT target</a> for details.
